# financial_tracking_website

./: .gitignore  docker-compose.yaml
ftw_backend/: .gitignore  Dockerfile  pyproject.toml  requirements.in  requirements.txt
ftw_backend/configs/: log_config.json
ftw_backend/src/: main.py
ftw_backend/src/controllers/: __init__.py  account_controller.py  categorie_controller.py  category_controller.py  category_type_controller.py  counterpart_controller.py  transaction_controller.py  type_controller.py
ftw_backend/src/database/: database.py  schemas.py
ftw_backend/src/exceptions/: exceptions.py  global_exception_handler.py
ftw_backend/src/models/: account.py  category.py  category_type.py  counterpart.py  transaction.py  type_overview.py
ftw_backend/src/services/: __init__.py  account_service.py  category_service.py  category_type_service.py  counterpart_service.py  csv_handler.py  transaction_service.py  type_service.py
ftw_backend/src/utils/: logging.py
ftw_database/: Dockerfile  pg_hba.conf
ftw_database/docker-entrypoint-initdb.d/: 01-copy-pg_hba.sh
ftw_frontend/: .gitignore  Dockerfile  package.json  tsconfig.json  vite.config.ts
ftw_frontend/src/: App.tsx  home.tsx  layout.tsx  main.tsx  router.ts  styles.css
ftw_frontend/src/pages/: dashboard.tsx  settings.tsx  transactions.tsx
ftw_frontend/src/themes/: basic_theme.ts
fwt_backend/: pyproject.toml
fwt_backend/src/: main.py
fwt_backend/src/controllers/: transaction_controller.py
fwt_backend/src/database/: __init__.py  database.py  schemas.py
fwt_backend/src/models/: transaction.py
(+33 files in other folders)
